--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於我們</title>
+    <title data-zh="關於我們" data-en="About Us">關於我們</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/aboutUs.css">
     <link rel="stylesheet" type="text/css" href="CSS/basic.css">
