--- a/moreStory.html
+++ b/moreStory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>更多故事</title>
+    <title data-zh="更多故事" data-en="More Stories">更多故事</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="CSS/moreStory.css">
     <link rel="stylesheet" type="text/css" href="CSS/basic.css">
