--- a/donateRegistration.html
+++ b/donateRegistration.html
@@ -14,9 +14,6 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/taiwan-area-selector@1.0.2/dist/taiwan-area-selector.min.css">
     <script src="https://cdn.jsdelivr.net/npm/taiwan-area-selector@1.0.2/dist/taiwan-area-selector.min.js"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js"></script>
 </head>
 <body>
     <!--nav-header-->
@@ -197,5 +194,7 @@
     </div>
     <script src="js/donateRegistration.js"></script>
     <script src="js/basic.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-firestore.js"></script>
     </body>
 </html>
