--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul>
                     <li><a href="#" data-zh="無家者據點查詢" data-en="Search Homeless Locations">無家者據點查詢</a></li>
                     <li><a href="donateRegistration.html" data-zh="送愛登錄" data-en="Donate Registration">送愛登錄</a></li>
-                    <li><a href="#" data-zh="送愛情形一覽" data-en="Donation Overview">送愛情形一覽</a></li>
+                    <li><a href="donationOverview.html" data-zh="送愛情形一覽" data-en="Donation Overview">送愛情形一覽</a></li>
                 </ul>
             </li>
         </div>
