--- a/moreStory.html
+++ b/moreStory.html
@@ -20,28 +20,35 @@
     <!--nav-header-->
     <div class = "fixed">
         <div class="nav-header">
-            <h2>台灣無家者送愛整合平臺</h2>
+            <h2 data-zh="台灣無家者送愛整合平臺" data-en="Homeless Care and Meal Coordination Platform">台灣無家者送愛整合平臺</h2>
             <div class="header-r">
                 <button class="btn-lan">中</button>
                 <button class="btn-lan">En</button>
                 <div class="search-box">
-                    <input type="text" placeholder="Search" class="search-input">
-                    <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
+                    <input type="text" placeholder="Search" class="search-input" id="search-input">
+                    <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon" id="search-icon">
                 </div>
             </div>
         </div>
         <!--nav-content-->
         <div class="nav-content">
-            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a>
-            <button class=btn-catalog>我要送愛</button>
-            <a href="aboutUs.html"><button class=btn-catalog>關於我們</button></a>
-            <a href="moreStory.html"><button class=btn-catalog>更多故事</button></a>
-            <button class=btn-catalog>常見問題</button>
-            <button class=btn-catalog>用戶登入/註冊</button>
+            <a href="index.html"><img src="img/img_index/Home.png" alt="Home Icon" class="home-icon" style="cursor: pointer;"></a><div class="dropdown">
+            <li><a href="#" data-zh="我要送愛" data-en="Donation Suppulies">我要送愛 </a>
+                <ul>
+                    <li><a href="#" data-zh="無家者據點查詢" data-en="Search Homeless Locations">無家者據點查詢</a></li>
+                    <li><a href="donateRegistration.html" data-zh="送愛登錄" data-en="Donate Registration">送愛登錄</a></li>
+                    <li><a href="#" data-zh="送愛情形一覽" data-en="Donation Overview">送愛情形一覽</a></li>
+                </ul>
+            </li>
+        </div>
+            <a href="aboutUs.html"  class=a-catalog><button class=btn-catalog data-zh="關於我們" data-en="About Us">關於我們</button></a>
+            <a href="moreStory.html" class=a-catalog><button class=btn-catalog data-zh="更多故事" data-en="More Stories">更多故事</button></a>
+            <a href="FAQ.html" class=a-catalog><button class=btn-catalog data-zh="常見問題" data-en="FAQ">常見問題</button></a>
+            <button class=btn-catalog data-zh="用戶登入/註冊" data-en="User Login/Register">用戶登入/註冊</button>
         </div>
     </div>
 
-    <!-- contain -->        
+    <!-- content -->        
     <div class="main_contain">
         <div class="btn_both">
             <h1 class="btn btn_send" onclick="showArea('area_main')">送愛者</h1>
@@ -206,5 +213,6 @@
     </div>
 
     <script src="js/more.js"></script>
+    <script src="js/basic.js"></script>
 </body>
 </html>
