--- a/donateRegistration.html
+++ b/donateRegistration.html
@@ -129,10 +129,10 @@
                     <h2 class ="sheet-ct" data-zh="類別（物品）" data-en="Category(Supplies)">類別（物品）</h2>
                     <select id="object" name="object" class="input">
                         <option data-zh="請選擇類別（物品）" data-en="Please select a category(supply)">請選擇類別（物品）</option>
-                        <option value="food">食品</option>
-                        <option value="dailyNecessities">生活用品</option>
-                        <option value="emergencyMedicalSupplies">緊急醫療用品</option>
-                        <option value="others">其他</option>
+                        <option>食品</option>
+                        <option>生活用品</option>
+                        <option>緊急醫療用品</option>
+                        <option>其他</option>
                     </select>    
                     <h2 class = "sheet-cm" data-zh="預計受惠人數" data-en="Expected Number of Beneficiaries">預計受惠人數</h2>
                     <input type="number" placeholder="60" min="0" class="input" id="beneficiaries">
