--- a/donationOverview.html
+++ b/donationOverview.html
@@ -17,10 +17,11 @@
     <!-- 加载 AG Grid 样式 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ag-grid-community/styles/ag-grid.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ag-grid-community/styles/ag-theme-alpine.css">
-    
     <!-- 加载 Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <!-- ApexCharts -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
 <body>
     <!--nav-header-->
@@ -28,8 +29,8 @@
         <div class="nav-header">
             <h2 data-zh="台灣無家者送愛整合平臺" data-en="Homeless Care and Meal Coordination Platform">台灣無家者送愛整合平臺</h2>
             <div class="header-r">
-                <button class="btn-lan">中</button>
-                <button class="btn-lan">En</button>
+                <button class="btn-lan" id="zh">中</button>
+                <button class="btn-lan" id="en">En</button>
                 <div class="search-box">
                     <input type="text" placeholder="Search" class="search-input" id="search-input">
                     <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon" id="search-icon">
@@ -49,16 +50,67 @@
         </div>
             <a href="aboutUs.html"  class=a-catalog><button class=btn-catalog data-zh="關於我們" data-en="About Us">關於我們</button></a>
             <a href="moreStory.html" class=a-catalog><button class=btn-catalog data-zh="更多故事" data-en="More Stories">更多故事</button></a>
-            <button class=btn-catalog data-zh="常見問題" data-en="FAQ">常見問題</button>
-            <button class=btn-catalog data-zh="用戶登入/註冊" data-en="User Login/Register">用戶登入/註冊</button>
+            <a href="FAQ.html" class=a-catalog><button class=btn-catalog data-zh="常見問題" data-en="FAQ">常見問題</button></a>
+            <a href="#" class=a-catalog><button class=btn-catalog data-zh="用戶登入/註冊" data-en="User Login/Register">用戶登入/註冊</button></a>
         </div>
     </div>
     <!--list-->
     <div class="list-bg">
-        <h2 class="list-h">送愛情形一覽</h2>
+        <h2 class="list-h" data-zh="送愛情形一覽" data-en="Donation Overview">送愛情形一覽</h2>
         <div id="myGrid" class="ag-theme-alpine" style="height: 540px;"></div>
     </div>
-    
+    <h2 class="chart-h" data-zh="統計長條圖" data-en="Statistical Bar Chart">統計長條圖</h2>
+    <h4 class="chart-p" data-zh="調整上方「送愛情形一覽」的條件篩選清單，方可查看統計圖表" data-en="Adjust the selection criteria of the Donate Overview to view the statistical charts.">調整上方「送愛情形一覽」的條件篩選清單，方可查看統計圖表</h4>
+    <div class="chart">
+        <div class="chart-l">
+            <h2 class="chart-lh" data-zh="想送愛給特定地點的無家者卻不知道要送什麼？" data-en="Not sure what to give to homeless individuals in specific locations?">想送愛給特定地點的無家者卻不知道要送什麼？</h2>
+            <h2 class="chart-lp" data-zh="該地於該時的各物品類別數量" data-en="The quantity of each item category at that location and time.">該地於該時的各物品類別數量</h2>
+            <div id="chart1"></div>
+        </div>
+        <div class="chart-r">
+            <h2 class="chart-rh" data-zh="有特定物資卻不知道該送至何處？" data-en="Have specific supplies but unsure where to send them?">有特定物資卻不知道該送至何處？</h2>
+            <h2 class="chart-rp" data-zh="該物資類別在該時於各地的數量" data-en="The quantity of this supply category across locations at that time.">該物資類別在該時於各地的數量</h2>
+            <div id="chart2"></div>
+        </div>
+    </div>
+    <!--footer-->
+    <div class="footer">
+        <div class = "footer-top">
+            <div class="left">
+                <h2>Homeless Care & Meal <br>Coordination Platform</h2>
+                <h6 data-zh="數位二甲 | 111219005 | 吳函蓁" data-en="NTUE DTD | 111219005 | Han-Jhen, Wu">數位二甲 | 111219005 | 吳函蓁</h6>
+                <h6 data-zh="數位二甲 | 111219007 | 趙翊如" data-en="NTUE DTD | 111219007 | Yi-Ju, Chao">數位二甲 | 111219007 | 趙翊如</h6>
+                <h6 data-zh="113學年度上學期（大二）" data-en="First semester of the 113th academic year (sophomore year)">113學年度上學期（大二）</h6>
+                <h6 data-zh="前端工程設計" data-en="Frontend web development">前端工程設計</h6>
+                <h6  data-zh="期末專題成果" data-en="Final Project Results">期中專題成果</h6>
+            </div>
+            <div class="middle1">
+                <h3 data-zh="人生百味" data-en="Do You a Flavor">人生百味</h3>
+                <a href="https://doyouaflavor.tw/" target="_blank" class = "footer-a"><h6 data-zh="官方網站" data-en="Official website">官方網站</h6></a> 
+                <a href="https://doyouaflavor.tw/activities/" target="_blank" class = "footer-a"><h6 data-zh="專案列表" data-en="Project list">專案列表</h6></a> 
+                <a href="https://doyouaflavor.tw/blog/" target="_blank" class = "footer-a"><h6 data-zh="議題文章" data-en="Topic articles">議題文章</h6></a> 
+                <a href="https://doyouaflavor.tw/donate/" target="_blank" class = "footer-a"><h6 data-zh="捐款支持" data-en="Donate to support">捐款資訊</h6></a> 
+                <a href="https://www.books.com.tw/products/0010741248?" target="_blank" class = "footer-a"><h6 data-zh="街頭生存指南" data-en="Street survival guide">街頭生存指南</h6></a> 
+                <a href="https://doyouaflavor.tw/homeless-helper/" target="_blank" class = "footer-a"><h6 data-zh="無家者小幫手" data-en="Homeless helper">無家者小幫手</h6></a> 
+            </div>
+            <div class="middle2">
+                <h3 data-zh="其他" data-en="Others">其他</h3>
+                <a href="https://www.instagram.com/tiatde/" target="_blank" class = "footer-a"><h6 data-zh="開發者支持" data-en="Developer support">開發者支持</h6></a> 
+                <a href="https://www.instagram.com/tiatde/" target="_blank" class = "footer-a"><h6 data-zh="平臺問題回報" data-en="Platform issue report">平臺問題回報</h6></a> 
+                <a href="https://www.youtube.com/@yijuchao5024" target="_blank" class = "footer-a"><h6 data-zh="更多影音作品" data-en="More video content">更多影音作品</h6></a> 
+            </div>
+            <div class="right">
+                <h3>FOLLOW</h3>
+                <a href="https://www.instagram.com/tiatde/" target="_blank" class = "footer-a"><img src="img/img_index/Instagram.png" alt="Instagram" class="instagram"></a> 
+                <a href="https://www.facebook.com/profile.php?id=100004458227420" target="_blank" class = "footer-a"><img src="img/img_index/Facebook.png" alt="Facebook" class="facebook"></a> 
+                <a href="https://www.youtube.com/@yijuchao5024" target="_blank" class = "footer-a"><img src="img/img_index/Youtube.png" alt="Youtube" class="youtube"></a> 
+            </div>
+        </div>
+        <div class = "footer-bottom">
+            <hr class = "footer-hr">
+            <p class = "footer-p">2024 produced by Yi-Ju, Chao & Han-Jhen, Wu</p>
+        </div class = "footer-bottom">
+    </div>
     <script src="https://www.itxst.com/package/ag-grid/ag-grid-community.js"></script>
     <link href="https://www.itxst.com/package/ag-grid/styles/ag-grid.css" rel="stylesheet"/>
     <script src="js/basic.js"></script>
