--- a/donateRegistration.html
+++ b/donateRegistration.html
@@ -99,9 +99,9 @@
                         <option value="金門縣">金門縣</option>
                         <option value="連江縣">連江縣</option>
                     </select>
-                    <h2 class = "sheet-cm" data-zh="類別（地點）" data-en="Category(Place)">類別（地點）</h2>
+                    <h2 class = "sheet-cm" data-zh="類別（地點）" data-en="Category(Location)">類別（地點）</h2>
                     <select id="place" name="place" onchange="updateLocationOptions()" class="input">
-                        <option data-zh="請選擇類別（地點）" data-en="Please select a category(place)">請選擇類別（地點）</option>
+                        <option data-zh="請選擇類別（地點）" data-en="Please select a category(location)">請選擇類別（地點）</option>
                     </select>
                 <div class="div-other">
                     <input type="checkbox" id="other" name="other" value="other" class="checkbox" onclick="toggleOtherInput()">
@@ -116,9 +116,9 @@
                     <select id="area" name="area" onchange="updatePlaceOptions()" class="input">
                         <option data-zh="請選擇地區" data-en="Please select a district">請選擇地區</option>
                     </select>
-                    <h2 class = "sheet-cm" data-zh="詳細地點" data-en="Specific Place">詳細地點</h2>
+                    <h2 class = "sheet-cm" data-zh="詳細地點" data-en="Specific Location">詳細地點</h2>
                     <select id="location" name="location" class="input">
-                        <option data-zh="請選擇詳細地點" data-en="Please select a specific place">請選擇詳細地點</option>
+                        <option data-zh="請選擇詳細地點" data-en="Please select a specific location">請選擇詳細地點</option>
                     </select>    
                 </div>
             </div>
@@ -138,7 +138,7 @@
                     <input type="number" placeholder="60" min="0" class="input" id="beneficiaries">
                 </div>
                 <div class = sheet-cr>
-                    <h2 class ="sheet-ct" data-zh="物品名稱/ 件數" data-en="Item name/ Quantity">物品名稱/ 件數</h2>
+                    <h2 class ="sheet-ct" data-zh="物品名稱/ 件數" data-en="Supply name/ Quantity">物品名稱/ 件數</h2>
                     <input type="text" placeholder="毛衣/ 60件" class="input" data-zh="毛衣/ 60件" data-en="sweaters/ 60">
                 </div>
             </div>
