--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!--purpose-->
     <div class="purpose">
         <h2 class="purpose-h" data-zh="平臺宗旨" data-en="Platform Purpose">平臺宗旨</h2>
-        <div class=purpose-c>
+        <div class="purpose-c">
             <div class="giver">
                 <h2 class="giver-h" data-zh="送愛者" data-en="Giver">送愛者</h2>
                 <img src="img/img_index/Lefthand.png" alt="Lefthand" class="lefthand">
@@ -269,7 +269,7 @@
                     </div>
                 </div>
             <!--autumn-->
-            <div class="autumn">
+            <div class="autumn"> 
                 <!--card1-->
                 <div class="cardA">
                     <div class="card-imgA">
