--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>常見問題</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/FAQ.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/FAQ.css">
     <link rel="stylesheet" type="text/css" href="CSS/basic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
