--- a/FAQ.html
+++ b/FAQ.html
@@ -6,7 +6,7 @@
     <title>常見問題</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/FAQ.css">
-    <link rel="stylesheet" type="text/css" href="CSS/basic.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/basic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
