--- a/donationOverview.html
+++ b/donationOverview.html
@@ -51,7 +51,7 @@
             <a href="aboutUs.html"  class=a-catalog><button class=btn-catalog data-zh="關於我們" data-en="About Us">關於我們</button></a>
             <a href="moreStory.html" class=a-catalog><button class=btn-catalog data-zh="更多故事" data-en="More Stories">更多故事</button></a>
             <a href="FAQ.html" class=a-catalog><button class=btn-catalog data-zh="常見問題" data-en="FAQ">常見問題</button></a>
-            <a href="#" class=a-catalog><button class=btn-catalog data-zh="用戶登入/註冊" data-en="User Login/Register">用戶登入/註冊</button></a>
+            <a href="signUp.html" class=a-catalog><button class=btn-catalog data-zh="用戶登入/註冊" data-en="User Login/Register">用戶登入/註冊</button></a>
         </div>
     </div>
     <!--list-->
@@ -65,12 +65,12 @@
         <div class="chart-l">
             <h2 class="chart-lh" data-zh="想送愛給特定地點的無家者卻不知道要送什麼？" data-en="Not sure what to give to homeless individuals in specific locations?">想送愛給特定地點的無家者卻不知道要送什麼？</h2>
             <h2 class="chart-lp" data-zh="該地於該時的各物品類別數量" data-en="The quantity of each item category at that location and time.">該地於該時的各物品類別數量</h2>
-            <div id="chart1"></div>
+            <div id="chart1" class="chart1"></div>
         </div>
         <div class="chart-r">
             <h2 class="chart-rh" data-zh="有特定物資卻不知道該送至何處？" data-en="Have specific supplies but unsure where to send them?">有特定物資卻不知道該送至何處？</h2>
             <h2 class="chart-rp" data-zh="該物資類別在該時於各地的數量" data-en="The quantity of this supply category across locations at that time.">該物資類別在該時於各地的數量</h2>
-            <div id="chart2"></div>
+            <div id="chart2" class=chart2></div>
         </div>
     </div>
     <!--footer-->
