--- a/moreStory.html
+++ b/moreStory.html
@@ -177,7 +177,7 @@
                     <img class="intro_img" src="img/img_story/高齡勞工.png">
                 </div>
             </div><!-- area_intro -->
-            <i class="fa-solid fa-arrow-up" style="color: #354567;">箭頭</i>
+            <i class="fa-solid fa-arrow-up" style="color: white;"  onclick="scrollToTop()"><a>top</a></i>
         </div><!-- area_main2 -->
         <div class="spacer"></div>
     </div>   <!-- main_contain -->
